# memento-memory

./: .env.example  .gitignore  BENCHMARKS.md  Dockerfile  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: publish.yml  test.yml
benchmarks/longmemeval/: run_benchmark.py
benchmarks/longmemeval/baselines/: run_markdown_baseline.py  run_vector_baseline.py
src/memento/: __init__.py  cli.py  config.py  conflict.py  consolidation.py  db.py  embedder.py  entity_resolution.py  extraction.py  gating.py  graph_store.py  llm.py  mcp_server.py  memory_store.py  models.py  privacy.py  retrieval.py  schema.py  scratchpad.py  verbatim_store.py  web.py
tests/: conftest.py  test_benchmarks.py  test_conflict.py  test_consolidation.py  test_extraction.py  test_gating.py  test_graph_store.py  test_mcp_server.py  test_memory_store.py  test_merge_split.py  test_privacy.py  test_resolution.py  test_resolution_tier2.py  test_retrieval.py  test_schema.py  test_scratchpad.py  test_stage0.py  test_verbatim.py
tests/benchmarks/: generate_dataset.py  run_benchmarks.py
