[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memento-memory"
version = "0.1.0"
description = "Temporal knowledge graph memory system for AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Memento Contributors" },
]
keywords = ["memory", "knowledge-graph", "ai-agents", "mcp", "temporal"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp>=1.0.0",
    "sqlite-vec>=0.1.1",
    "uuid7>=0.1.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.42.0"]
openai = ["openai>=1.0.0"]
gemini = ["google-genai>=1.0.0"]
local-embeddings = [
    "sentence-transformers>=3.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
memento = "memento.cli:main"
memento-mcp = "memento.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/memento"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
